--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <link rel="stylesheet" href="src/style.css" />
-    <title>AI French Poem Generator</title>
+    <title>AI Spanish Poem Generator</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>AI Spanich Poem Generator</h1>
+        <h1>AI Spanish Poem Generator</h1>
       </header>
 
       <main>
@@ -20,7 +20,7 @@
         <form id="poem-generator-form">
           <input
             type="text"
-            placeholder="Enter the topic of the French poem"
+            placeholder="Enter the topic of the Spanish poem"
             autofocus
             required
             autocomplete="off"
@@ -32,17 +32,13 @@
 
       <footer>
         This AI project was coded by
-        <a href="https://github.com/matthieua/" target="_blank">Matt Delac</a>
+        <a href="https://github.com/annx-c" target="_blank">Ana Cañete</a>
         and is
         <a
-          href="https://github.com/shecodesio/french-poem-generator"
+          href="https://github.com/annx-c/ai-poem-generator"
           target="_blank"
         >
           open-sourced on GitHub</a
-        >
-        and is
-        <a href="https://ai-french-poem-generator.netlify.app/" target="_blank"
-          >hosted on Netlify</a
         >.
       </footer>
     </div>
