Improving the user experience

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,22 +18,23 @@
     </header>
 
     <main>
+      <div class="poem hidden" id="poem"></div>
+      <div class="form-container">
 
-      <div class="poem" id="poem"></div>
-
-      <form id="poem-generator-form">
-        <input type="text" placeholder="Enter the topic of the Spanish poem" autofocus required autocomplete="off"
-          class="instructions" id="user-instructions" />
-        <input type="submit" class="submit-button" />
-      </form>
+        <form id="poem-generator-form">
+          <input type="text" placeholder="Enter the topic of a Spanish poem" autofocus required autocomplete="off"
+            class="instructions" id="user-instructions" />
+          <input type="submit" class="submit-button" />
+        </form>
+        <div class="hint">i.e: Lavender, Moon, Sunset or Flower</div>
+      </div>
     </main>
-
-   
   </div>
   <footer>
     <div class="footer-content">
       <p>© 2025 Annx_C - AI Poem. All rights reserved. | Open Source: <a
-          href="https://github.com/annx-c/ai-poem-generator" target="_blank">Code</a></p>
+          href="https://github.com/annx-c/ai-poem-generator" target="_blank">Code</a>
+      </p>
       <div class="social-icons">
         <a href="https://github.com/annx-c" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://www.instagram.com/annx_93/?igsh=MXRqeG03aTd2NXA2Mg%3D%3D#" target="_blank"><i
