Improve lettering style

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-
+<link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&family=Great+Vibes&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="src/style.css" />
   <title>AI Spanish Poem Generator</title>
 </head>
@@ -14,7 +14,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>AI Spanish Poem Generator</h1>
+      <h1> <span>AI</span> Spanish Poem Generator</h1>
     </header>
 
     <main>
